fixed last pic overlaping not appearing

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -114,7 +114,7 @@ body.scrolling-to-black .section.newspaper {
 .stack-img:nth-child(5) { z-index: 5; }
 .stack-img:nth-child(6) { z-index: 6; }
 .stack-img:nth-child(7) { z-index: 7; }
-.stack-img:nth-child(7) { z-index: 7; }
+.stack-img:nth-child(8) { z-index: 8; }
 
 /* When revealed */
 .stack-img.visible {
